fixes a z-index bug

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -170,7 +170,7 @@ img {
           flex-grow: 1;
           text-align: center;
           justify-content: center;
-          z-index: 2;
+          z-index: 1;
 
           @media screen and (min-width: $screen-desktop) {
             text-align: left;
